# Rohier

./: .editorconfig  .gitignore  README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
demo/: oh-package-lock.json5  oh-package.json5
demo/src/main/: module.json5
demo/src/main/ets/demobackupability/: DemoBackupAbility.ets
demo/src/main/ets/pages/: Index.ets
demo/src/main/ets/rohierdemoability/: RohierDemoAbility.ets
demo/src/main/resources/base/element/: string.json
demo/src/ohosTest/: module.json5
rohier/: .gitignore  Index.ets  build-profile.json5  oh-package-lock.json5  oh-package.json5
rohier/src/main/: module.json5
rohier/src/main/cpp/: CMakeLists.txt
rohier/src/main/cpp/rohier/: rohier_napi.cpp
rohier/src/main/cpp/rohier/common/: status.h
rohier/src/main/cpp/rohier/decoder/: buffer.h
rohier/src/main/cpp/rohier/decoder/audio/: audio_decoder.h  ohcodec_audio_decoder.cpp  ohcodec_audio_decoder.h
rohier/src/main/cpp/rohier/decoder/video/: ffmpeg_video_decoder.cpp  ffmpeg_video_decoder.h  ohcodec_video_decoder.cpp  ohcodec_video_decoder.h  video_decoder.h
rohier/src/main/cpp/rohier/demuxer/: demuxer.h  ffmpeg_demuxer.h  ohcodec_demuxer.cpp  ohcodec_demuxer.h
rohier/src/main/cpp/rohier/metadata/: chapter_metadata.h  metadata.cpp  metadata_extractor.cpp  metadata_extractor.h  track_metadata.h  video_metadata.h
rohier/src/main/cpp/rohier/napi/: rohier_napi.cpp  rohier_player_napi.cpp  rohier_player_napi.h
rohier/src/main/cpp/rohier/native_window/: rohier_window_manager.cpp  rohier_window_manager.h
rohier/src/main/cpp/rohier/player/: player.h  rohier_player.cpp  rohier_player.h
rohier/src/main/cpp/rohier/renderer/audio/: audio_renderer.h
rohier/src/main/cpp/rohier/renderer/video/: video_renderer.h
rohier/src/main/cpp/rohier/source/: video_source.h
rohier/src/main/cpp/rohier/utils/: napi_utils.cpp  napi_utils.h  pointer_management.h  rohier_logger.h  rohy_logger.h  safe_utils.cpp  safe_utils.h
rohier/src/main/cpp/types/librohier/: Index.d.ts  oh-package.json5
rohier/src/main/ets/components/: MainPage.ets
rohier/src/main/ets/napi/: RohierPlayerNapi.d.ts
rohier/src/main/ets/player/: RohierPlayer.ets  VideoSource.ets
rohier/src/main/ets/proxy/: RohierProxy.ets
rohier/src/ohosTest/: module.json5
